--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:800&display=swap" rel="stylesheet"> 
+    <style>body {font-family: 'Nunito', sans-serif;}</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
