--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito:800&display=swap" rel="stylesheet"> 
-    <style>body {font-family: 'Nunito', sans-serif;}</style>
+    <style>body, html {font-family: 'Nunito', sans-serif; height: 100vh}</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
